# atomic-plugins-ads

src/atomic/android/admob/: AndroidManifest.xml  build.gradle
src/atomic/android/admob/src/com/ludei/ads/admob/: AdInterstitialAdMob.java  AdServiceAdMob.java  RewardedVideoAdMob.java
src/atomic/android/common/: AndroidManifest.xml  build.gradle
src/atomic/android/common/src/com/ludei/ads/: AbstractAdRewardedVideo.java  AdRewardedVideo.java  AdService.java
src/atomic/android/mopub/: build.gradle
src/atomic/android/mopub/src/com/ludei/ads/mopub/: AdServiceMoPub.java
src/atomic/ios/admob/: LDAdServiceAdMob.m
src/cpp/: AdRewardedVideo.h  AdService.h
src/cpp/android/: AndroidManifest.xml  build.gradle
src/cpp/android/jni/: AdServiceAndroid.cpp  AdServiceAndroid.h  Android.mk  Application.mk  CMakeLists.txt
src/cpp/android/src/com/ludei/ads/cpp/: AdServiceBridge.java
src/cpp/desktop/: AdBanner.cpp  AdInterstitial.cpp  AdService.cpp  CMakeLists.txt  NullAdBanner.cpp  NullAdBanner.h  NullAdInterstitial.cpp  NullAdInterstitial.h  NullAdRewardedVideo.cpp  NullAdRewardedVideo.h  NullAdService.cpp  NullAdService.h  NullAdUtils.cpp  NullAdUtils.h
test/android/AdTest/gradle/wrapper/: gradle-wrapper.properties
test/cpp/proj.android/app/: build.gradle
test/cpp/proj.android/app/src/main/: AndroidManifest.xml
test/cpp/proj.ios/Game.xcodeproj/: project.pbxproj
test/cpp/proj.ios/ios/: Info.plist
